--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.3.0",
     "mysql":"*",
     "connect-redis":"*",
-    "connect-flash":"*"
+    "connect-flash":"*",
+    "markdown" : "*"
   }
 }
